app/assets/stylesheets/landing-page.css
body,
html {
    width: 100%;
    height: 100%;
    scroll-behavior: smooth;
    overflow-x: hidden;
}

body,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
}
body {
    margin-top:5.5rem;
}

.topnav {
    font-size: 14px;
}

.lead {
    font-size: 18px;
    font-weight: 400;
}

.intro-header {
    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
    padding-bottom: 50px;
    text-align: center;
    color: #f8f8f8;
    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('/assets/helena-lopes-463976-unsplash');
    background-size: cover;
    background-color: #BA4851;
}
.navbar {
    background:rgb(30,30,30);
    border:0;
    margin-bottom: 0;
    min-height: 5.5rem;
}
.navbar-default .navbar-nav > li > a {
    color: white;
    letter-spacing: 1px;
}
.navbar-default .navbar-brand {
    color: white;
    font:lato;
}
.intro-message {
    position: relative;
    padding-top: 20%;
    padding-bottom: 20%;
}

.intro-message > h1 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 5em;
}

.intro-divider {
    width: 400px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0,0,0,0.2);
}

.intro-message > h3 {
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
}

@media(max-width:767px) {
    .intro-message {
        padding-bottom: 15%;
    }

    .intro-message > h1 {
        font-size: 3em;
    }

    ul.intro-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.intro-social-buttons > li:last-child {
        margin-bottom: 0;
    }

    .intro-divider {
        width: 100%;
    }
}

.network-name {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
    color:white;
}

.content-section-a {
    padding: 50px 0;
    background-color: #f8f8f8;
    
}

.content-section-b {
    padding: 50px 0;
    border-top: 1px solid #000000;
    border-bottom: 1px solid #000000;
}

.section-heading {
    margin-bottom: 30px;
}

.section-heading-spacer {
    float: left;
    width: 200px;
    border-top: 3px solid #9681AF;
}
.btn-lg, .btn-group-lg > .btn, .btn-group-lg > .submit, .submit {
    background-color: #000000;
    color: #000000;
}

.banner {
    padding: 50px 0;
    color: white;
    height: 100vh;
    background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('/assets/benjamin-davies-287077-unsplash.jpg');
    background-size: 100% 100%;
    background-repeat: no-repeat;
}
.banner > .custom-container {
    display: grid;
    grid-template-columns:4fr 1fr;
    padding: 0 15%;
    height: 80%;
}
.banner > .row {
    padding: 0 15%;
}

#add-me-button {
     display: flex;
     justify-content:center;
     align-items:center;
     width: 200px;
     height: 50px;
     background-color: #938CBD;
     color: white;
     opacity: 0.8;
     border-radius: 5px;
     letter-spacing: 2px;
     font-size: 20px;
     box-shadow: 3px 3px 1px 0px rgba(77,75,77,1);
}
#add-me-button:hover {
    text-decoration: none;
    background-color: rgb(60,60,60);
}
.text-wrapper {
    font-size:30px;
}
.text-wrapper >* {
    display: block;
    margin-bottom: 20px;
}
.rotating-words {
    height: 50px;
    position: relative;
}
.rotating-words span{
	animation: topToBottom 12.5s linear infinite 0s;
	-ms-animation: topToBottom 12.5s linear infinite 0s;
	-webkit-animation: topToBottom 12.5s linear infinite 0s;
	color: #938CBD;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	height: 100%;
}
.rotating-words span:nth-child(2){
	animation-delay: 2.5s;
	-ms-animation-delay: 2.5s;
	-webkit-animation-delay: 2.5s;
}
.rotating-words span:nth-child(3){
	animation-delay: 5s;
	-ms-animation-delay: 5s;
	-webkit-animation-delay: 5s;
}
.rotating-words span:nth-child(4){
	animation-delay: 7.5s;
	-ms-animation-delay: 7.5s;
	-webkit-animation-delay: 7.5s;
}
.rotating-words span:nth-child(5){
	animation-delay: 10s;
	-ms-animation-delay: 10s;
	-webkit-animation-delay: 10s;
}

@-moz-keyframes topToBottom{
	0% { opacity: 0; }
	5% { opacity: 0; -moz-transform: translateY(-50px); }
	10% { opacity: 1; -moz-transform: translateY(0px); }
	25% { opacity: 1; -moz-transform: translateY(0px); }
	30% { opacity: 0; -moz-transform: translateY(50px); }
	80% { opacity: 0; }
	100% { opacity: 0; }
}
@-webkit-keyframes topToBottom{
	0% { opacity: 0; }
	5% { opacity: 0; -webkit-transform: translateY(-50px); }
	10% { opacity: 1; -webkit-transform: translateY(0px); }
	25% { opacity: 1; -webkit-transform: translateY(0px); }
	30% { opacity: 0; -webkit-transform: translateY(50px); }
	80% { opacity: 0; }
	100% { opacity: 0; }
}
#email-link {
    color: #9681AF;
    text-decoration: none;
}
footer {
    padding: 50px 0;
    background-color: #f8f8f8;
}

p.copyright {
    margin: 15px 0 0;
}

